2008-06-06  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 2.1.14

2008-06-05  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/log.cc (save_log_cont): Take care of setting the value for
	last_save_log_dir to the last used one only when the process
	succeeded, and empty it when it failed (N80933).
	(save_log): Remove the previously stored dir here too if failed
	because of a GNOME_VFS_ERROR_NOT_FOUND error (N80933).

2008-06-04  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* src/update-notifier-conf.h: Defined the constant
	AVAILABLE_UPDATES_FILE_NAME (N85812).

	* src/update-notifier.c (osso_rpc_handler): Don't ignore it the
	first time that the alarm goes off (N85812).
	(handle_inotify): Use AVAILABLE_UPDATES_FILE_NAME instead of a
	hardcoded string (N85812).

2008-06-03  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 2.1.13

2008-06-03  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/repo.cc (repository_uri_is_valid): Look for blanks in the
	URI field, which is not going to be allowed from now on. Do
	exactly the same checks for all the availble methods (N86066).
	(cat_edit_response): Just call to repository_uri_is_valid when
	validating the repository URI field (N86066).

	* src/util.cc (volume_path_is_mounted_writable): Try to write a
	dummy file to be completely sure, since GnomeVFS is not always
	up-to-date about the read-only status of a partition (N85947).

2008-06-03  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/apt-worker.cc (update_package_cache): Restore
	"Dir::State::Lists" to the true original value, not the one that
	FindDir has computed for us (N86181, N86094).

2008-05-29  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/update-notifier.c (setup_alarm): Set the Gconf value for
	check_interval to the default value if no key was found (N76679).

2008-05-29  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/log.cc (save_log): Don't unescape nor convert the passed URI
	to a local path, just store it as it is (N80933).